# make-your-team

./: .gitignore  docker-compose.yml  example.env  pyproject.toml
backend/api/v1/: urls.py
backend/apps/members/: admin.py  models.py  serializers.py  views.py
backend/apps/members/migrations/: 0001_initial.py  0002_member_bio_member_created_at_member_is_verified_and_more.py  0003_alter_member_username.py  0004_alter_member_email.py
backend/apps/projects/: admin.py  models.py  serializers.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_technologyname_alter_project_icon_and_more.py
backend/core/: settings.py  urls.py
backend/tests/: conftest.py
backend/tests/factories/: common.py  members.py  projects.py
backend/tests/members/: conftest.py
backend/tests/members/integration/: test_member_requests.py
backend/tests/members/unit/: all_member_models_fields.py  test_member_models.py
backend/tests/projects/: conftest.py
backend/tests/projects/integration/: test_project_requests.py
backend/tests/projects/unit/: all_project_models_fields.py  test_project_models.py
docker/: Dockerfile  example.dockerenv
